# p8-vessel-main

LaTeX Template/: .gitignore  Makefile  main.tex
LaTeX Template/appendix/: aTest.tex
LaTeX Template/chapters/: aFigureSample.tex  bTableSample.tex  cEquationSample.tex  dTikzSample.tex  eCodeSample.tex
LaTeX Template/setup/: bibliography.bib  preamble.tex
MPC - Miniproject/: FigureLatex.m  FigureLatex2Axis.m  group_832.m  group_832_data.mat  group_832_latex.m  price_data_generator.m
MPC - Miniproject/PDF/: .gitignore  Shit Deleter.bat  main.tex  shit_deleter.sh
Matlab Simulations/Robust Controller/: Controller.m  Model.slx  Parameters.m
Meetings/: .gitignore  Shit Deleter.bat  main.synctex  main.tex  preamble.tex  shit_deleter.sh
Model Simulation/: BoatInfo.m  ControllerLQR.m  FigureLatex.m  FindDistWP.m  FindLOSpoint.m  InnerController.slx  InnerController.slx.autosave  KalmanModel.asv  KalmanModel.m  KalmanModelSim.slx  KalmanModelSim.slx.autosave  Model_NL.slx  Model_NL.slx.autosave  Model_NL_6DOF.slx  Models.slx  Models_sfun.mexw64  Parameters.asv  Parameters.m  PathFollowingModel.slx  PlannerResults.m  TestFindLOSPoint.m  abc.m  discreteModel.m  discreteSSmodel.slx  discreteSSmodel_check.slx  disturbanceFFT.m  pathGeneration.m  plotData.m  robustModel.m  windModel.m
ROS/: .gitignore  README.md
Robot Vision - Miniproject/Brick Recognition/: Miniproject.m  calibrateAxis.m
Robot Vision - Miniproject/KUKA Agilus Connector pack/: 20160313_KUKAInterface.docx  InterfaceFunctions.txt  KukaServer.src  KukaServer.xml  MiniprojectCodeKUKA.m  MovePiece.m  Parameters.m
Robot Vision - Miniproject/MATLAB Code/: MiniprojectCodeKUKA.m  MoveHome.m  MyParameters.m  PickPlace.m  RecognizeBlocks.m  RecognizeTest.m  RobotConnectorKUKA.m  calibrateAxis.m
Robot Vision - Miniproject/Report/: main.tex
Robot Vision - Miniproject/RobotStudioMatlab/: MiniprojectCodeRobotStudio.m  MoveHome.m  MyParameters.m  PickPlace.m  RecognizeBlocks.m  RecognizeTest.m  RobotStudioConnector.m  calibrateAxis.m  main.m  test.m
aauship-orig-code/: .packetHandler.py.swp  lli-tester-no-trash.py  lli-tester.py  lli_serial.py  packetparser.py
aauship-orig-code-from-git/: .gitignore  NOTES.md  TODO.md
aauship-orig-code-from-git/doc/: README
aauship-orig-code/meas/: acc.txt  inclog.txt  received.txt
aauship_832_ws/: .gitignore  data_120417_1.txt  data_120417_3.txt  data_120417_6.txt  fjorden.mat  klingenberg.mat  ssaauship.mat  testinstructions.txt  tmp_attitude.data  tmp_position.data
aauship_832_ws/src/: 15_05speedtest_imu.txt  15_05speedtest_input.txt  15_05speedtest_kfatt.txt  1605controltest_att.txt  1605controltest_gps.txt  1605controltest_imu.txt  1605controltest_input.txt  1605controltest_pos.txt  1605kalmantest_att.txt  1605kalmantest_att1.txt  1605kalmantest_imu.txt  1605kalmantest_imu1.txt  2017-05-02_test1_att.csv  2017-05-02_test1_gps.csv  2017-05-02_test1_imu.csv  2017-05-02_test1_input.csv  2017-05-02_test1_pos.csv  2017-05-02_test2_att.csv  2017-05-02_test2_gps.csv  2017-05-02_test2_imu.csv  2017-05-02_test2_input.csv  2017-05-02_test2_pos.csv  2017-05-02_test3_att.csv  2017-05-02_test3_gps.csv  2017-05-02_test3_imu.csv  2017-05-02_test3_input.csv  2017-05-02_test3_pos.csv  2017-05-04_moving_test_att.csv  (+435 more)
aauship_832_ws/src/aauship_control/: 2017-03-10-14-40-02.bag  CMakeLists.txt  added_mass_test.launch  bag  bags_2017-03-20-09-59-41.bag  bags_2017-03-20-10-09-57.bag  bags_2017-05-24-11-40-25.bag  data.txt  package.xml  package.xml.save  path_controller_model_test.launch  xdot.txt
aauship_832_ws/src/aauship_control/bags/: 2017-03-06-16-32-25.bag  2017-04-12-09-51-03.bag  2017-04-12-10-03-27.bag  2017-04-24_kf_test_att.txt  2017-04-24_kf_test_imu.txt  2017-05-14-18-13-03.bag  aauship_control_2017-04-04-15-27-32.bag  aauship_control_2017-04-04-15-43-26.bag  aauship_control_2017-04-21-15-16-15.bag  aauship_control_2017-04-24-09-04-34.bag  bags_2017-03-17-15-55-53.bag  bags_2017-03-17-16-00-05.bag  bags_2017-03-20-09-44-47.bag  bags_2017-03-20-09-50-51.bag  bags_2017-03-20-10-15-07.bag  bags_2017-03-20-10-30-58.bag  data_120417_5.txt  data_180417_1.txt  data_180417_2.txt  data_180417_3.txt  data_180417_4.txt  data_180417_5.txt  data_180417_6.txt  data_180417_8.txt  data_180417_9.txt  imu_040417.txt  imu_test2_040417.txt  imutest1405.txt  model_120417.txt  model_out.txt
aauship_832_ws/src/aauship_control/include/aauship_control/: KalmanFilter.h  MahonyAHRS.h  ekf.h  ekf_types.h  ukf.h  ukf_math.h  ukf_parameter_ndim.h  ukf_parameter_scalar.h  ukf_samples.h  ukf_sr_state_ndim.h  ukf_state_ndim.h  ukf_types.h
aauship_832_ws/src/aauship_control/launch/: KF_attitude_test.launch  KF_position_test.launch  added_mass_test.launch  emergency_joy.launch  forceTest.launch  gps_test.launch  inner_controller_final.launch  inner_controller_test.launch  inner_controller_test_old_gps.launch  kalman_filters.launch  kf_attitude_initial_test.launch  lqr_controller.launch  modelTest.launch  path_controller_model_test.launch  path_follower_test.launch  remote_joy.launch  sensors.launch  sensors.launch.save  test.launch
aauship_832_ws/src/aauship_control/msg/: ADIS16405.msg  Attitude.msg  AttitudeStates.msg  BatteryMonitor.msg  Faps.msg  GPS.msg  KFStates.msg  LLIinput.msg  PID.msg  PositionStates.msg  RTKGPS.msg  Ref.msg  controlTest.msg  ref.msg  testSetpoints.msg
aauship_832_ws/src/aauship_control/scripts/: control-node.py  controller-node.py  ctrl_input_serv.py  fapsPacket.py  fapsParse.py  gps-interface.py  gps1-node.py  gpsfunctions.py  joy-teleop-node.py  kalmanfilter-node.py  kalmanfilterfoo.py  keyboard-teleop-node.py  lli-node.py  model-node-temp.py  model-node.py  sensor-node.py
aauship_832_ws/src/aauship_control/src/: .lqr-controller-node.cpp.swp  KF-att-node.cpp  KF-pos-node.cpp  KalmanFilter.cpp  LQR.cpp  MahonyAHRS.cpp  ahrs-mahony-node.cpp  gps_get_data.cpp  joy-teleop-node.cpp  lqr-controller-node.cpp  path-follower-node.cpp  path_follower_node.cpp  pathgen-node.cpp  wps.txt
codeDocumentation/: main.aux  main.bcf  main.out  main.run.xml  main.tex  main.toc
(+635 files in other folders)
